<resources>
    <string name="app_name">Gedor</string>
    <string name="app_name2">GErakan DORong Keluhan Masyarakat</string>
    <string name="title_home">Home</string>
    <string name="title_complaints">Complaints</string>
    <string name="title_account">Account</string>
    <string name="title_login">Login to your account</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_login_desc">Kindly login to gain access to your account</string>
    <string name="logout">Logout</string>
    <string name="title_signup">Create an account</string>
    <string name="title_register_desc">Complete the registration process to create an account</string>
    <string name="username_hint">Enter username</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_hint">Type your password again</string>
    <string name="change_password">Change password</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="total_complaint">Total Complaint</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About GEDOR</string>
    <string name="term_of_use">Term Of Use</string>
    <string name="report">Report an Issue</string>
    <string name="upload">Send</string>
    <string name="form_instruction">Please complete all fields</string>
    <string name="complaint_hint">Type your feedback here</string>
    <string name="address_hint">Address</string>
    <string name="others">Others</string>
    <string name="general">General</string>
    <string name="avatar">Avatar</string>
    <string name="kecamatan_hint">Kecamatan</string>
    <string name="kabupaten_hint">Kabupaten</string>
    <string name="provinsi_hint">Provinsi</string>
    <string name="fab_send_feedback_description">Send a feedback</string>
    <string name="phone_number_hint">Enter phone number</string>
    <string name="phone_number">Phone number</string>

    <!-- home -->
    <string name="main_tag">Welcome, Environmental Warriors!</string>
    <string name="second_tag">What breakthrough do you want to make today?</string>
    <string name="create_report">Take Action</string>
    <string name="check_progress">Stay Updated!</string>
    <string name="help">Need Help?</string>
    <string name="greetings">Hai,</string>

    <!-- Detail Complaint-->
    <string name="title_detail_report">Report Title</string>
    <string name="tag_report">Report Tag</string>
    <string name="cancel">Cancel</string>
</resources>