<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gedorteam.gedor.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_login_fragment"
            app:destination="@id/login_fragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_complaints"
        android:name="com.gedorteam.gedor.ui.complaints.ComplaintFragment"
        android:label="@string/title_complaints"
        tools:layout="@layout/fragment_complaint" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.gedorteam.gedor.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.gedorteam.gedor.ui.login.LoginFragment"
        tools:layout="@layout/fragment_login" />


</navigation>