<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        android:background="@color/primaryContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_signup"
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/undraw_sign_up_n6im"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_bg_shape"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/tv_title_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/title_signup"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title_register_desc"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_register"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/title_register_desc"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_register_desc"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/username"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_layout_register_username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_username"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:inputType="text"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                    
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_register_username"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_layout_register_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_register_email"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/phone_number"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_layout_register_phone_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_phone_number"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:inputType="number"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_register_phone_number"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/password"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_password"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_confirm_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_register_password"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/confirm_password"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_confirm_password"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_register_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_password_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_sign_up"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_layout_register_confirm_password"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cornerRadius="8dp"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tv_already_have_an_account"
                    app:layout_constraintBottom_toBottomOf="@id/tv_already_have_an_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_already_have_an_account"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="12dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_already_have_an_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/already_have_an_account"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tv_already_have_an_account"
                    app:layout_constraintBottom_toBottomOf="@id/tv_already_have_an_account"
                    app:layout_constraintStart_toEndOf="@id/tv_already_have_an_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="24dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_already_have_an_account"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="50dp"
                    app:cornerRadius="8dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        tools:visibility="visible"
        tools:indeterminate="false"
        />

</FrameLayout>