<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primaryContainer"
            >

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="320dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/undraw_mobile_login_re_9ntv"
                android:layout_marginTop="24dp"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_bg_shape"
                android:paddingBottom="80dp"
                >

                <TextView
                    android:id="@+id/tv_title_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/ed_login_email"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/title_login"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_title_login_desc"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_login"
                    app:layout_constraintStart_toStartOf="@id/tv_title_login"
                    android:text="@string/title_login_desc"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_login_desc"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="18dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_login_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_email"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ed_login_email"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/password"
                    android:textSize="16sp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_password"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_login"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ed_login_password"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cornerRadius="8dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tv_dont_have_an_account"
                    app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_an_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_dont_have_an_account"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="12dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_dont_have_an_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/dont_have_an_account"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/tv_dont_have_an_account"
                    app:layout_constraintBottom_toBottomOf="@id/tv_dont_have_an_account"
                    app:layout_constraintStart_toEndOf="@id/tv_dont_have_an_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="24dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_sign_up"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="50dp"
                    app:cornerRadius="8dp"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_circular"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminate="true"
        tools:visibility="visible"
        tools:indeterminate="false"
        />

</FrameLayout>