<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.account.AccountFragment">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_account_circle_24"
                app:tint="@color/primary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_label_username"
                app:layout_constraintTop_toBottomOf="@id/profile"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="28dp"
                android:textSize="16sp"
                android:text="@string/username"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_edit_username"
                app:layout_constraintTop_toBottomOf="@id/tv_label_username"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:startIconDrawable="@drawable/outline_account_circle_24"
                app:startIconTint="@color/primary"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_label_email"
                app:layout_constraintTop_toBottomOf="@id/ed_edit_username"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="28dp"
                android:textSize="16sp"
                android:text="@string/email"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ed_edit_email"
                app:layout_constraintTop_toBottomOf="@id/tv_label_email"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:startIconDrawable="@drawable/outline_email_24"
                app:startIconTint="@color/primary"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_change_password"
                app:drawableTint="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/ed_edit_email"
                android:layout_marginTop="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="12dp"
                android:text="@string/change_password"
                android:textSize="21sp"
                app:drawableStartCompat="@drawable/outline_key_24"
                app:drawableEndCompat="@drawable/outline_arrow_circle_right_24"
                android:drawablePadding="12dp"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_edit_profile"
                app:layout_constraintTop_toBottomOf="@id/tv_change_password"
                android:layout_marginTop="24dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                app:cornerRadius="8dp"
                android:text="@string/save"
                app:icon="@drawable/baseline_save_24"
                app:iconGravity="textStart"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress_circular"
        android:indeterminate="true"
        android:visibility="gone"
        tools:indeterminate="false"
        tools:visibility="visible"
        />
</FrameLayout>